# hatter

./: .drone.yml  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: 00_basic_example.py  00_basic_publish.py  01_amqpmanager.py  01_concurrent_processing.py  02_heartbeat_with_blocking.py
src/hatter/: amqp.py  domain.py  hatter.py  util.py
test/: conftest.py  test_serdes.py
